# react

./: .travis.yml  CMakeLists.txt  README.md  react-bf.spec  react.hpp  time_stats.hpp
benchmarks/: CMakeLists.txt  benchmark_for.cpp  benchmark_recurse.cpp  benchmarks.cpp  benchmarks.hpp  for.cpp  recurse.cpp
bindings/c/: CMakeLists.txt  react_c.cpp  react_c.h  react_c.hpp
debian/: changelog  control  react-dev.install  react.install  rules
examples/: CMakeLists.txt  example.cpp  parse.py
examples/cpp/: CMakeLists.txt  aggregators.cpp  example.cpp  high_level.cpp  low_level.cpp  stats.cpp
examples/elliptics/: CMakeLists.txt  elliptics_react.cpp  elliptics_react.h  elliptics_react.hpp
examples/reverbrain/: CMakeLists.txt  reverbrain_react.cpp  reverbrain_react.h  reverbrain_react.hpp
include/react/: actions_set.hpp  aggregator.hpp  call_tree.hpp  react.h  react.hpp  updater.hpp  utils.hpp
include/react/aggregators/: aggregator.hpp  category_filter_aggregator.hpp  complex_aggregator.hpp  filter_aggregator.hpp  histogram_aggregator.hpp  parent_call_tree_aggregator.hpp  recent_trees_aggregator.hpp  unordered_call_tree_aggregator.hpp
src/: react.cpp
tests/: CMakeLists.txt  test_actions_set.cpp  test_aggregator.cpp  test_call_tree.cpp  test_call_tree_updater.cpp  test_public_api.cpp  test_stats.cpp  tests.cpp  tests.hpp
tests/aggregators/: test_aggregator.cpp  test_recent_trees_aggregator.cpp
web/: config.py  web.py
web/templates/: histogram.html  histograms_list.html  index.html  stacked_histogram.html  tree.html  trees_list.html
